# fizz-buzz-whiz-kata-02

./: README.md  main.py  pyproject.toml  test_plan.md
src/kata/: code.py
tests/: test_code.py
